# Golavo

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Makefile  NOTES.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  ruff.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.remember/: now.md  remember.md  today-2026-07-16.md
LICENSES/: README.md
core/: README.md  pyproject.toml
core/golavo_core/: __init__.py  __main__.py  analysis.py  analytics.py  artifacts.py  calibration.py  cli.py  competitions.py  evaluation.py  evidence.py  identity.py  outlook.py  packstore.py  picks.py  proof.py  ratings.py  resources.py  retrospective.py  score_matrix.py  scorers.py  season_outlook.py  signatures.py  standings.py  trends.py
core/golavo_core/ai/: __init__.py  narration.py  prompts.py  sanitize.py  whitelist.py
core/golavo_core/facts/: __init__.py  _history.py  coincidence.py  context.py  engine.py  events.py  evidence.py  guardrails.py  invariant.py  packs.py  predictive.py  registry.py  render.py  signature.py  wc_history.py  worldcup.py
core/golavo_core/ingest/: __init__.py  domestictxt.py  footballcsv.py  footballtxt.py  match_index.py  matchframe.py  openfootball.py  overlay.py  snapshot.py  worldcup.py
core/golavo_core/ledger/: __init__.py
core/golavo_core/models/: __init__.py  candidates.py
core/tests/: test_analysis.py  test_build_domestic_fixtures.py  test_build_provenance.py  test_competition_catalog.py  test_completed_view.py  test_contextual_model.py  test_derived_markets.py  test_domestictxt.py  test_event_facts.py  test_existing_data_analytics.py  test_footballcsv.py  test_footballtxt.py  test_forecast_proof.py  test_halftime_facts.py  test_identity.py  test_leak_safe_view.py  test_match_evidence.py  test_match_index.py  test_matchframe.py  test_narration_lanes.py  test_openfootball_halftime.py  test_outlook.py  test_pack_signatures.py  test_packstore.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase5_ai_guards.py  test_phase5_evidence.py  test_phase5_redteam.py  test_phase7_facts.py  test_phase8_score_matrix.py  test_picks.py  test_properties.py  test_ratings.py  test_retrospective.py  test_scorers.py  test_season_outlook.py  test_season_unlock.py  (+8 more)
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.adhoc.conf.json  tauri.conf.json  tauri.updater.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: correction_export.rs  fallback_update.rs  health.rs  lib.rs  main.rs  updater.rs
docs-site/: astro.config.mjs  design.md  package-lock.json  package.json
packaging/: README.md  build.sh  golavo-sidecar.spec
packs/: README.md  enrichment.json  isolated.json  snapshots.json
scripts/: audit_openfootball.py  build_context_manifest.py  build_domestic_fixtures.py  build_fjelstul_pack.py  build_footballcsv_history.py  build_geo_enrichment.py  build_model_cards.py  build_openfootball_pack.py  build_openfootball_uefa_pack.py  build_sourcepack.py  build_venue_context.py  build_worldcup_overlay.py  build_worldcup_refresh.py  build_wyscout_research_pack.py  bump_version.py  check_license_isolation.sh  check_team_fragmentation.py  dev.py  gen_third_party_notices.py  generate_notebook_demo.py  generate_sample_artifacts.py  list_active_pack_manifests.py  make_update_manifest.py  packlib.py  test-updater-local.sh  validate_artifacts.py  validate_context_pack.py  validate_correction_isolation.py  validate_license_isolation.py  validate_provenance.py  validate_research_isolation.py  validate_sources.py  watch_and_seal.py
server/: README.md  pyproject.toml
server/golavo_server/: __init__.py  ai_gateway.py  analysis.py  analytics.py  capabilities.py  conditions.py  context_registry.py  correction_exports.py  correction_policy.py  correction_sanitize.py  correction_store.py  correction_validation.py  fixtures.py  follows.py  jobs.py  main.py  matches.py  openligadb_jobs.py  openligadb_overlay.py  openligadb_source.py  openligadb_state.py  outlook.py  picks.py  ratings.py  refresh.py  refresh_jobs.py  refresh_sources.py  refresh_state.py  research_pack.py  retrospective.py  runtime.py  scorers.py  seal.py  settlement.py  sidecar.py  weather.py  weather_source.py  weather_store.py
server/golavo_server/research/: __init__.py  ai_extract.py  capture.py  extract.py  fetch.py  orchestrator.py  policy.py  settings.py  store.py  websearch.py  wikidata.py  wikipedia.py
server/tests/: test_ai_gateway.py  test_ai_research_gateway.py  test_analysis_api.py  test_analytics_api.py  test_api.py  test_capabilities_api.py  test_conditions_api.py  test_contract_drift.py  test_correction_packaging.py  test_corrections.py  test_corrections_api.py  test_domestic_refresh.py  test_fixtures_api.py  test_follow_packaging.py  test_follows.py  test_job_lanes.py  test_jobs.py  test_match_narrative_api.py  test_match_research_api.py  test_matches_api.py  test_narrative_threadpool.py  test_openligadb_overlay.py  test_outlook_api.py  test_phase6_e2e.py  test_phase7_facts_api.py  test_picks_api.py  test_picks_service.py  test_ratings_api.py  test_refresh.py  test_refresh_api.py  test_refresh_integration.py  test_refresh_production.py  test_refresh_sources.py  test_refresh_state.py  test_refresh_wiring.py  test_research.py  test_research_api.py  test_retrospective_api.py  test_scorers_api.py  test_seal_api.py  (+12 more)
ui/: .gitignore  .oxlintrc.json  HANDOFF.md  README.md  (+6 more)
(+457 files in other folders)
