[project]
name = "golavo-core"
version = "0.0.0"
description = "Golavo modeling library: ingest, warehouse, models, ledger, facts."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Umang Dhawan" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["golavo_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
