[project]
name = "golavo-core"
version = "0.5.1"
description = "Golavo modeling library: ingest, warehouse, models, ledger, facts."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Umang Dhawan" }]
dependencies = [
  "jsonschema==4.26.0",
  "numpy==2.4.6",
  "pandas==3.0.3",
  "pyarrow==24.0.0",
  "scipy==1.18.0",
]

[project.scripts]
golavo = "golavo_core.cli:main"

[project.optional-dependencies]
dev = ["pytest==9.1.1", "ruff==0.15.5", "mypy==1.19.1", "hypothesis==6.156.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["golavo_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
