[project]
name = "golavo-server"
version = "0.0.0"
description = "Golavo local server (FastAPI): routes, jobs, evidence bundles, AI gateway."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "Umang Dhawan" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "golavo-core",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["golavo_server"]

[tool.hatch.metadata]
allow-direct-references = true
