[project]
name = "golavo-server"
version = "0.10.0"
description = "Golavo local server (FastAPI): routes, jobs, evidence bundles, AI gateway."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Umang Dhawan" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "golavo-core",
]

[project.scripts]
# Frozen by PyInstaller into golavo-sidecar-<target-triple> for the desktop shell.
golavo-sidecar = "golavo_server.sidecar:main"

[project.optional-dependencies]
dev = ["pytest>=8", "httpx", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["golavo_server"]

[tool.hatch.metadata]
allow-direct-references = true
