[package]
name = "golavo-desktop"
version = "0.15.0"
description = "Golavo desktop shell (Tauri 2) — spawns and supervises the FastAPI sidecar."
authors = ["Umang Dhawan"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
# Tauri v2 keeps app logic in a lib so mobile targets can reuse it.
name = "golavo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.2"
url = "2"
# Native message dialog for the pre-event-loop fatal-launch path. Used DIRECTLY
# (not via tauri-plugin-dialog) so it runs its own modal loop on the calling
# thread and cannot deadlock before Tauri's event loop starts. Already in the
# tree transitively via tauri-plugin-dialog, so this adds no new download.
rfd = "0.16"

# The GitHub-release FALLBACK updater (src/fallback_update.rs) works in EVERY
# build — including unsigned dev/source builds that lack the signed updater
# below. It hits the public GitHub releases API and streams the platform
# installer, so it needs an HTTPS client + semver comparison. Both are already
# compiled into every build transitively (reqwest via `tauri`, semver too), so
# depending on them directly adds no new download; default-features are off so
# we reuse tauri's rustls stack via feature unification and never pull openssl.
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] }
semver = "1"
tauri-plugin-notification = "2"

# The updater is wired but gated behind this feature: a default local/CI build
# has NO active updater (no signing key exists). Maintainers holding the keys
# build with `--features updater`. See src/updater.rs and docs/updates-rollback.md.
[dependencies.tauri-plugin-updater]
version = "2"
optional = true

[features]
default = []
updater = ["dep:tauri-plugin-updater"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
